# copper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dep/: CMakeLists.txt
samples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/core/: calcu.cpp  calcu.hpp  core.cpp  core.hpp  tools.cpp  tools.hpp
src/ext/: gui.cpp  gui.hpp
src/math/: math_helper.h  mathpls.h
src/pipeline/: async.cpp  async.hpp  pipeline.cpp  pipeline.hpp  rasterize.cpp  rasterize.hpp
src/print/: ascii.cpp  ascii.hpp  blue_noise.h  print.cpp  print.hpp
